# Antaresz-s-algorithm-practice

./: CMakeLists.txt  Doxyfile  config.h.in
AAP/: package-lock.json  package.json
AAP/docs/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md
AAP/docs/Classes/: classdata_read.md  classinsertion_sort.md  classrandom_gernarate.md
AAP/docs/Files/: data_read_8hpp.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  dir_d44c64559bbebec7f509842c48db8b23.md  insertion_sort_8cpp.md  insertion_sort_8hpp.md  log_8cpp.md  log_8hpp.md  main_8cpp.md  random_gernarate_8cpp.md  random_gernarate_8hpp.md
include/: dataRead.hpp  insertionSort.hpp  log.hpp  randomGernarate.hpp
src/: insertionSort.cpp  log.cpp  main.cpp  randomGernarate.cpp
tests/: inseriontSortTest.cpp  randomGernarateTest.cpp
